@@ -1,3 +1,8 @@
+Fri Jun 20 11:04:58 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * orbsvcs/examples/RtEC/MCast/MCast.cpp:
+          Fixed compile problem in emulated exception case
+
 Fri Jun 20 09:13:33 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/orbsvcs/Event/EC_Lifetime_Utils_T.{h,i}:
